# AutoDeploymentService

./: .env.example  .gitignore  LICENSE  README.md  autodeployment.service  configure_sudo.sh  generate_service.sh  install.sh  install_user.sh  pyproject.toml  ruff.toml  webhook_server.py
tests/: .env.test  TESTING.md  manual_test.py  test_webhook_server.py
